# AutoBTDisconnect

./: AudioCheck.cpp  AudioCheck.h  BluetoothAdapter.cpp  BluetoothDevice.cpp  BluetoothDevice.h  BluetoothRadio.cpp  BluetoothRadio.h  CMakeLists.txt  README.md  main.cpp
include/: AudioCheck.h  BluetoothAdapter.h  BluetoothRadio.h
src/: AudioCheck.cpp  BluetoothAdapter.cpp  BluetoothDevice.cpp  BluetoothRadio.cpp  main.cpp
